# ogs

./: .clang-tidy  .gitmodules  2dGW_test.sh  BinaryNodeStructConvert.cpp  CMakeLists.txt  Jenkinsfile  groups  process_perf_output.sh  project.config  timing.sh  valgrind.suppressions  x.awk  xx.py  yy.py
ProcessLib/: CMakeLists.txt  CentralDifferencesJacobianAssembler.cpp  CentralDifferencesJacobianAssembler.h  CompareJacobiansJacobianAssembler.cpp  CreateNonequilibriumInitialState.cpp  CreateNonequilibriumInitialState.h  CreateProcessData.cpp  GroundwaterFlow.h  GroundwaterFlowFEM.h  GroundwaterFlowProcess.h  InitialCondition.cpp  InitialCondition.h  IntegrationPointWriter.h  LocalAssemblerInterface.cpp  LocalAssemblerInterface.h  NonequilibriumInitialState.h  Output.cpp  Process.cpp  Process.h  ProcessData.h  ProcessOutput.cpp  ProcessOutput.cpp.orig  ProcessOutput.h  ProcessVariable.cpp  ProcessVariable.h  TimeLoop.cpp  UncoupledProcessesTimeLoop.cpp  VectorMatrixAssembler.cpp  VectorMatrixAssembler.h
ProcessLib/BoundaryCondition/: BHEBottomDirichletBoundaryCondition.cpp  BHEBottomDirichletBoundaryCondition.h  BHEInflowDirichletBoundaryCondition-impl.h  BHEInflowDirichletBoundaryCondition.cpp  BHEInflowDirichletBoundaryCondition.h  BoundaryCondition.cpp  BoundaryCondition.h  BoundaryConditionCollection.cpp  BoundaryConditionCollection.h  BoundaryConditionConfig.h  CreateBoundaryCondition.cpp  HydrostaticBoundaryCondition.cpp  HydrostaticBoundaryCondition.h  NonuniformVariableDependantNeumannBoundaryCondition.cpp  NonuniformVariableDependantNeumannBoundaryConditionLocalAssembler.h  NormalTractionBoundaryConditionLocalAssembler.h  PhaseFieldIrreversibleDamageOracleBoundaryCondition.cpp
ProcessLib/ComponentTransport/: ComponentTransportFEM.h  Tests.cmake
ProcessLib/Deformation/: BMatrixPolicy.h  LinearBMatrix.h
ProcessLib/GroundwaterFlow/: GroundwaterFlowFEM.h  GroundwaterFlowProcess.cpp  GroundwaterFlowProcess.h  Tests.cmake
ProcessLib/HT/: HTProcess.cpp  MonolithicHTFEM.h
ProcessLib/HeatConduction/: Tests.cmake
ProcessLib/HeatTransportBHE/: CMakeLists.txt  CreateHeatTransportBHEProcess.cpp  CreateHeatTransportBHEProcess.h  HeatTransportBHEProcess.cpp  HeatTransportBHEProcess.h  HeatTransportBHEProcessAssembler.h  HeatTransportBHEProcessData.h  Tests.cmake
ProcessLib/HydroMechanics/: CreateHydroMechanicsProcess.cpp  HydroMechanicsFEM-impl.h  HydroMechanicsFEM.h  HydroMechanicsProcess-impl.h  HydroMechanicsProcess.cpp  HydroMechanicsProcess.h  HydroMechanicsProcessData.h  LocalAssemblerInterface.h  PressureInterpolation.h  Tests.cmake
ProcessLib/LiquidFlow/: Tests.cmake
ProcessLib/Output/: CreateOutput.cpp  IntegrationPointWriter.cpp  IntegrationPointWriter.h  Output.cpp  Output.h  ProcessOutput.cpp
ProcessLib/Parameter/: CurveScaledParameter.h  GroupBasedParameter.cpp  MeshElementParameter.h
ProcessLib/PhaseField/: CreatePhaseFieldProcess.cpp  PhaseFieldFEM-impl.h  PhaseFieldFEM.h  PhaseFieldProcess-impl.h  PhaseFieldProcess.h  PhaseFieldProcessData.h  Tests.cmake
ProcessLib/PipeNetwork/: CMakeLists.txt  CreatePipeNetworkProcess.cpp  CreatePipeNetworkProcess.h  PipeNetworkAssembly.h  PipeNetworkProcess.cpp  PipeNetworkProcess.h  PipeNetworkProcessData.h
ProcessLib/RichardsFlow/: CreateRichardsFlowProcess.cpp  RichardsFlowFEM.h  RichardsFlowProcess.cpp  RichardsFlowProcess.h  RichardsFlowProcessData.h
ProcessLib/RichardsMechanics/: CreateRichardsMechanicsProcess.cpp  IntegrationPointData.h  RichardsMechanicsFEM-impl.h  RichardsMechanicsFEM.h  RichardsMechanicsProcessData.h
ProcessLib/SmallDeformation/: CreateSmallDeformationProcess.cpp  LocalAssemblerInterface.h  NonequilibriumInitialState.h  SmallDeformationFEM.h  SmallDeformationProcess-impl.h  SmallDeformationProcess.cpp  SmallDeformationProcess.h  SmallDeformationProcessData.h  Tests.cmake
ProcessLib/SmallDeformationCommon/: Common.h  integration_point_data.h
ProcessLib/SmallDeformationNonlocal/: CreateSmallDeformationNonlocalProcess.cpp  Damage.h  IntegrationPointData.h  LocalAssemblerInterface.h  Tests.cmake  (+3 more)
(+898 files in other folders)
